--- a/JQuery_Training/ajaxdemo.html
+++ b/JQuery_Training/ajaxdemo.html
@@ -1,1 +1,2 @@
+<p>From Ajax Request</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis quas incidunt quibusdam.</p>
