Updating_JSP_Files

--- a/JSP_Training/index.html
+++ b/JSP_Training/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 
 	<head>
-	<title> JSP Training Zoho </title>
+		<link rel="stylesheet" href="index.css">
+		<title> JSP Training Zoho </title>
 	</head>
 
 	<body>
-		<p>
-		Evaluation</p>
+	<div id="wrapper">
+		<p>JSP Evaluation</p>
 		
 		<ol>
 		Task 1 Practical(L1):
@@ -50,14 +51,14 @@
 		
 		<li> Write a JSP program for Session tracking.<a href="T3Q3login.jsp"><button>Task 3 Question 2</button></a> </li>
 		
-		<li> Write a JSP code to do user authentication.<a href="T3Q3login.jsp"><button>Task 3 Question 3</button></a> </li>
+		<li> Write a JSP code to do user authentication.<a href="T3Q2.jsp"><button>Task 3 Question 3</button></a> </li>
 		
 		<li> Validate a password with Custom Tags.<a href="T3Q4.jsp"><button>Task 3 Question 4</button></a> </li>
 		
 		</ol>
 		
 		</p>
-		
+		</div>
 	</body>
 
 </html>
